<resources>
	<string name="app_name">Yum</string>
	<string name="action_sort">Sort</string>
	<string name="action_sort_best_match">Best Match</string>
	<string name="action_sort_rating">Rating</string>
	<string name="action_sort_review_count">Review Count</string>
	<string name="action_sort_distance">Distance</string>
	<string name="action_search">Search</string>
	<string name="no_reviews">No Reviews</string>
	<string name="no_results">No Results</string>
	<string name="search_location">Search Location</string>
	<string name="error_search_location_empty">Enter a location</string>
    <string name="title_activity_business_details">BusinessDetailsActivity</string>
	<string name="monday">Monday</string>
	<string name="tuesday">Tuesday</string>
	<string name="wednesday">Wednesday</string>
	<string name="thursday">Thursday</string>
	<string name="friday">Friday</string>
	<string name="saturday">Saturday</string>
	<string name="sunday">Sunday</string>
	<string name="closed">Closed</string>
	<string name="am">AM</string>
	<string name="pm">PM</string>
	<string name="hour_am_pm">%1$s:%2$s%3$s</string>
	<string name="retry">Retry</string>
	<string name="business_picture">Business Picture</string>
	<string name="error_fetching">Error retrieving content</string>
	<string name="error_geo_location">Can not view location</string>
</resources>
