<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="ca.yum.yum.SearchBusinessActivity">
	<item
		android:id="@+id/action_search"
		android:icon="@drawable/ic_search_white_24dp"
		android:title="@string/action_search"
		app:actionViewClass="android.support.v7.widget.SearchView"
		app:showAsAction="always|collapseActionView"
		/>
	<item
		android:id="@+id/action_sort"
		android:icon="@drawable/ic_sort_white_24dp"
		android:orderInCategory="100"
		android:title="@string/action_sort"
		app:showAsAction="ifRoom">
		<item
			android:id="@+id/action_sort_best_match"
			android:title="@string/action_sort_best_match"/>
		<item
			android:id="@+id/action_sort_rating"
			android:title="@string/action_sort_rating"/>
		<item
			android:id="@+id/action_sort_review_count"
			android:title="@string/action_sort_review_count"/>
		<item
			android:id="@+id/action_sort_distance"
			android:title="@string/action_sort_distance"/>
	</item>
</menu>
